Implemented caching and separated config

--- a/logging.conf
+++ b/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,main, admission, helpers, seleniumfactory
+keys=root,main, new_application, helpers, seleniumfactory
 
 [handlers]
 keys=consoleHandler
@@ -17,10 +17,10 @@ handlers=consoleHandler
 qualname=main
 propagate=0
 
-[logger_admission]
+[logger_new_application]
 level=INFO
 handlers=consoleHandler
-qualname=admission
+qualname=new_application
 propagate=0
 
 [logger_helpers]
